0519  게시글 수정 삭제

--- a/study/src/main/resources/static/css/board/board-dtl.css
+++ b/study/src/main/resources/static/css/board/board-dtl.css
@@ -30,3 +30,10 @@ td{
 	border: 1px solid black;
 	width: 400px;
 }
+
+.option-buttons{
+	display: flex;
+	justify-content: flex-end;
+	margin-top: 10px;
+	width: 50%;
+}
