--- a/study/src/main/resources/static/css/board/board-insert.css
+++ b/study/src/main/resources/static/css/board/board-insert.css
@@ -15,7 +15,7 @@
 
 .board-list{
 	display: flex;
-	flex-direction: colum;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%
